[package]
name = "pride"
version = "0.1.0"
authors = [ "velleda" ]
edition = "2021"
description = "draws pride flags (and other flags, if you want) to a terminal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "^1.5"
clap = { version = "^3.1", features = ["derive"] }
serde_yaml = "^0.8"
serde = { version = "^1.0", features = ["derive"] }
regex = "^1.5"
lazy_static = "^1.4"
enum-iterator = "^1.1"
